Fix player winner too big on mobile devices

--- a/src/style.css
+++ b/src/style.css
@@ -629,4 +629,9 @@ body {
   .menu-container > .primary-header > .container > .subtitle {
     font-size: 0.5rem;
   }
+
+  .results > .results-container > .player-winner {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
 }
